syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.fdj.grpcserver";
option java_outer_classname = "UserProto";
option objc_class_prefix = "USR";

package helloworld;

// The greeting service definition.
service User {
  // User details
  rpc AddUser (UserRequest) returns (UserResponse) {}
}

// The request message containing the user's name.
message UserRequest {
  string name = 1;
}

// The response message containing the greetings
message UserResponse {
  string message = 1;
  string user = 2;
}

